# Python_web_HW_08

./: pyproject.toml
part_1_autors/: quot_searcher.py  seed.py
part_2_contcts/: config.ini  consumer_email.py  consumer_sms.py  models_contact.py  producer.py
