[tool.poetry]
name = "python-web-hw-08"
version = "0.1.0"
description = ""
authors = ["olgapasichnyuk <olgapasichnyuk@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_hw_08"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
redis = "^4.5.1"
redis-lru = "^0.1.2"
pika = "^1.3.1"
faker = "^17.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
